Updates notebook execution counts and outputs
Updates the notebook's execution counts to reflect the latest run.

Also, refreshes the outputs of the code cells, reflecting changes in random number generation, date and time, and simulation results.

--- a/material-didactico/bloque-0/semana-3/funciones-modulos.ipynb
+++ b/material-didactico/bloque-0/semana-3/funciones-modulos.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "adc59be4",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "7bc73e87",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "da8de0a5",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "d760e6ca",
    "metadata": {},
    "outputs": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "4f300099",
    "metadata": {},
    "outputs": [
@@ -408,14 +408,14 @@
       "Raíz cuadrada: 4.0\n",
       "\n",
       "=== MÓDULO RANDOM ===\n",
-      "Equipo aleatorio: Valencia\n",
-      "Resultado aleatorio: 5 - 3\n",
-      "Tirada de moneda: Águila\n",
+      "Equipo aleatorio: Barcelona\n",
+      "Resultado aleatorio: 0 - 2\n",
+      "Tirada de moneda: Sello\n",
       "\n",
       "=== MÓDULO DATETIME ===\n",
-      "Fecha y hora actual: 2025-07-10 16:35:56.409434\n",
+      "Fecha y hora actual: 2025-07-10 16:38:36.862450\n",
       "Solo fecha: 2025-07-10\n",
-      "Solo hora: 16:35:56.409434\n",
+      "Solo hora: 16:38:36.862450\n",
       "Próximo partido: 2024-12-25\n"
      ]
     }
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "80d58528",
    "metadata": {},
    "outputs": [
@@ -473,15 +473,15 @@
      "output_type": "stream",
      "text": [
       "Raíz cuadrada de 25: 5.0\n",
-      "Número aleatorio: 3\n",
+      "Número aleatorio: 10\n",
       "\n",
       "Fecha actual: 2025-07-10\n",
-      "Número aleatorio: 0.9190023210650289\n",
+      "Número aleatorio: 0.30522494960009905\n",
       "\n",
       "=== SIMULACIÓN DE PARTIDOS ===\n",
-      "Barcelona 4 - 1 Valencia (Victoria Local)\n",
-      "Atletico 4 - 4 Valencia (Empate)\n",
-      "Barcelona 3 - 3 Atletico (Empate)\n"
+      "Real Madrid 0 - 3 Atletico (Victoria Visitante)\n",
+      "Atletico 2 - 1 Barcelona (Victoria Local)\n",
+      "Barcelona 2 - 3 Valencia (Victoria Visitante)\n"
      ]
     }
    ],
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "09cd4d2f",
    "metadata": {},
    "outputs": [
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "680fd49e",
    "metadata": {},
    "outputs": [
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "b9c39a4a",
    "metadata": {},
    "outputs": [
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "367f64be",
    "metadata": {},
    "outputs": [
@@ -959,20 +959,20 @@
       "================================================================================\n",
       "Pos Equipo          PJ  G   E   P   GF  GC  DG   Pts\n",
       "--------------------------------------------------------------------------------\n",
-      "1   Real Madrid     10  6   1   3   26  18    +8 19 \n",
-      "2   Barcelona       10  6   0   4   21  20    +1 18 \n",
-      "3   Sevilla         10  5   2   3   23  21    +2 17 \n",
-      "4   Valencia        10  4   1   5   18  22    -4 13 \n",
-      "5   Real Sociedad   10  3   1   6   20  22    -2 10 \n",
-      "6   Atletico Madrid 10  2   3   5   21  26    -5 9  \n",
+      "1   Valencia        10  5   3   2   26  24    +2 18 \n",
+      "2   Real Madrid     10  5   2   3   25  21    +4 17 \n",
+      "3   Atletico Madrid 10  4   3   3   14  14    +0 15 \n",
+      "4   Real Sociedad   10  4   2   4   20  17    +3 14 \n",
+      "5   Sevilla         10  2   4   4   18  21    -3 10 \n",
+      "6   Barcelona       10  1   4   5   18  24    -6 7  \n",
       "\n",
       "=== ESTADÍSTICAS DESTACADAS ===\n",
-      "🥇 Campeón: Real Madrid (19 puntos)\n",
-      "📉 Último lugar: Atletico Madrid (9 puntos)\n",
-      "⚽ Mejor ataque: Real Madrid (26 goles)\n",
-      "🛡️ Mejor defensa: Real Madrid (18 goles recibidos)\n",
-      "🎯 Partido con más goles: Real Sociedad vs Atletico Madrid (4-4) - 8 goles\n",
-      "📊 Total de goles en la liga: 129\n"
+      "🥇 Campeón: Valencia (18 puntos)\n",
+      "📉 Último lugar: Barcelona (7 puntos)\n",
+      "⚽ Mejor ataque: Valencia (26 goles)\n",
+      "🛡️ Mejor defensa: Atletico Madrid (14 goles recibidos)\n",
+      "🎯 Partido con más goles: Valencia vs Barcelona (5-3) - 8 goles\n",
+      "📊 Total de goles en la liga: 121\n"
      ]
     }
    ],
