Completes example code and adds output results
Fills in missing calculations for team statistics and comparisons,
enabling code execution and displaying expected outputs. Improves
clarity for students by providing concrete results for each exercise.

--- a/material-didactico/bloque-0/semana-1/configuracion-fundamentos.ipynb
+++ b/material-didactico/bloque-0/semana-1/configuracion-fundamentos.ipynb
@@ -91,10 +91,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a1fbc3f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Versión de Python: 3.10.12 (main, May 27 2025, 17:12:29) [GCC 11.4.0]\n",
+      "✅ Todas las librerías están instaladas correctamente\n",
+      "pandas: 2.3.1\n",
+      "numpy: 2.2.6\n"
+     ]
+    }
+   ],
    "source": [
     "# Verificar versión de Python\n",
     "import sys\n",
@@ -157,10 +168,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "96a48a03",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Equipo: Barcelona\n",
+      "Goles: 3\n",
+      "Promedio de edad: 25.5\n",
+      "Es ganador: True\n"
+     ]
+    }
+   ],
    "source": [
     "# Ejemplos de variables\n",
     "equipo = \"Barcelona\"\n",
@@ -186,10 +208,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "dcf9ad27",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: Lionel Messi - Tipo: <class 'str'>\n",
+      "Edad: 36 - Tipo: <class 'int'>\n",
+      "Altura: 1.7 - Tipo: <class 'float'>\n",
+      "Es activo: True - Tipo: <class 'bool'>\n",
+      "Equipos: ['Barcelona', 'PSG', 'Miami'] - Tipo: <class 'list'>\n",
+      "Estadísticas: {'goles': 800, 'asistencias': 350} - Tipo: <class 'dict'>\n"
+     ]
+    }
+   ],
    "source": [
     "# Tipos de datos básicos\n",
     "nombre_jugador = \"Lionel Messi\"           # str (string/texto)\n",
@@ -220,10 +255,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3f46a35d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total de goles: 3\n",
+      "Diferencia de goles: 1\n",
+      "Promedio de puntos por partido: 2.4\n",
+      "Puntos posibles: 30\n",
+      "Eficiencia: 80.0%\n"
+     ]
+    }
+   ],
    "source": [
     "# Operadores aritméticos\n",
     "goles_casa = 2\n",
@@ -246,10 +293,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2d241968",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¿Equipo A ganó?: True\n",
+      "¿Fue empate?: False\n",
+      "¿Equipo B perdió?: True\n",
+      "¿Hubo al menos 2 goles?: True\n"
+     ]
+    }
+   ],
    "source": [
     "# Operadores de comparación\n",
     "equipo_a_goles = 3\n",
@@ -273,10 +331,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f5120291",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== ANÁLISIS DEL PARTIDO ===\n",
+      "Partido: Real Madrid vs Barcelona\n",
+      "Resultado: 2 - 1\n",
+      "Ganador: Real Madrid\n",
+      "Total de goles: 3\n",
+      "Diferencia: 1\n",
+      "Asistencia: 75,000 espectadores\n",
+      "Promedio de goles por minuto: 0.0333\n",
+      "Tipo de resultado: Victoria local\n"
+     ]
+    }
+   ],
    "source": [
     "# Datos del partido\n",
     "equipo_local = \"Real Madrid\"\n",
@@ -326,10 +400,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "594831cf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jugador: Cristiano Ronaldo\n",
+      "Equipo: AL-NASSR\n",
+      "Posición: delantero\n",
+      "\n",
+      "Presentación: El jugador Cristiano Ronaldo juega como delantero en Al-Nassr\n",
+      "\n",
+      "Longitud del nombre: 17 caracteres\n",
+      "¿Contiene 'Ronaldo'?: True\n"
+     ]
+    }
+   ],
    "source": [
     "# Operaciones con strings\n",
     "jugador = \"cristiano ronaldo\"\n",
@@ -368,10 +457,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d2c2b816",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jugador: \n",
+      "Edad: 0 años\n",
+      "Equipo: \n",
+      "Posición: \n",
+      "Goles esta temporada: 0\n",
+      "¿Internacional?: Sí\n"
+     ]
+    }
+   ],
    "source": [
     "# Completa con información de tu jugador favorito\n",
     "nombre = \"\"  # Nombre completo\n",
@@ -402,10 +504,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "ebd5088f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== ESTADÍSTICAS DE MI EQUIPO ===\n",
+      "Partidos jugados: 20\n",
+      "Victorias: 12\n",
+      "Empates: 5\n",
+      "Derrotas: 3\n",
+      "Puntos totales: 41\n",
+      "Diferencia de goles: +17\n",
+      "Promedio de goles a favor: 1.75\n",
+      "Promedio de goles en contra: 0.90\n",
+      "Porcentaje de victorias: 60.0%\n"
+     ]
+    }
+   ],
    "source": [
     "# Datos del equipo (modifica estos valores)\n",
     "nombre_equipo = \"Mi Equipo\"\n",
@@ -417,12 +536,12 @@
     "goles_contra = 18\n",
     "\n",
     "# Cálculos (completa el código)\n",
-    "total_partidos = # Suma de victorias + empates + derrotas\n",
-    "puntos_totales = # Victorias * 3 + empates * 1\n",
-    "diferencia_goles = # Goles a favor - goles en contra\n",
-    "promedio_goles_favor = # Goles a favor / partidos jugados\n",
-    "promedio_goles_contra = # Goles en contra / partidos jugados\n",
-    "porcentaje_victorias = # (Victorias / partidos jugados) * 100\n",
+    "total_partidos = victorias + empates + derrotas  # Suma de victorias + empates + derrotas\n",
+    "puntos_totales = victorias * 3 + empates * 1  # Victorias * 3 + empates * 1\n",
+    "diferencia_goles = goles_favor - goles_contra  # Goles a favor - goles en contra\n",
+    "promedio_goles_favor = goles_favor / partidos_jugados  # Goles a favor / partidos jugados\n",
+    "promedio_goles_contra = goles_contra / partidos_jugados  # Goles en contra / partidos jugados\n",
+    "porcentaje_victorias = (victorias / partidos_jugados) * 100  # (Victorias / partidos jugados) * 100\n",
     "\n",
     "# Mostrar resultados\n",
     "print(f\"=== ESTADÍSTICAS DE {nombre_equipo.upper()} ===\")\n",
@@ -449,10 +568,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "898df98e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== COMPARACIÓN DE EQUIPOS ===\n",
+      "Arsenal: 65 puntos, diferencia: +25\n",
+      "Chelsea: 58 puntos, diferencia: +15\n",
+      "\n",
+      "Mejor equipo: Arsenal\n",
+      "Razón: mayor puntaje\n"
+     ]
+    }
+   ],
    "source": [
     "# Datos del Equipo A\n",
     "equipo_a = \"Arsenal\"\n",
@@ -467,9 +599,9 @@
     "goles_contra_b = 25\n",
     "\n",
     "# Comparaciones (completa el código)\n",
-    "diferencia_puntos = # Puntos A - Puntos B\n",
-    "diferencia_goles_a = # Goles favor A - Goles contra A\n",
-    "diferencia_goles_b = # Goles favor B - Goles contra B\n",
+    "diferencia_puntos = puntos_a - puntos_b  # Puntos A - Puntos B\n",
+    "diferencia_goles_a = goles_favor_a - goles_contra_a  # Goles favor A - Goles contra A\n",
+    "diferencia_goles_b = goles_favor_b - goles_contra_b  # Goles favor B - Goles contra B\n",
     "\n",
     "# Determinar mejor equipo\n",
     "if puntos_a > puntos_b:\n",
