Removes practice exercises section from fundamentals notebook
Eliminates introductory practical exercises to streamline the notebook
and focus on core content. This reduces redundancy and aligns the
material with updated instructional goals.

--- a/material-didactico/bloque-0/semana-1/configuracion-fundamentos.ipynb
+++ b/material-didactico/bloque-0/semana-1/configuracion-fundamentos.ipynb
@@ -445,196 +445,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e635d5f",
-   "metadata": {},
-   "source": [
-    "## 4. Ejercicios para Practicar\n",
-    "\n",
-    "### Ejercicio 1: Información Personal de un Jugador\n",
-    "\n",
-    "Crea variables para almacenar información de tu jugador favorito:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "d2c2b816",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jugador: \n",
-      "Edad: 0 años\n",
-      "Equipo: \n",
-      "Posición: \n",
-      "Goles esta temporada: 0\n",
-      "¿Internacional?: Sí\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Completa con información de tu jugador favorito\n",
-    "nombre = \"\"  # Nombre completo\n",
-    "edad = 0    # Edad actual\n",
-    "equipo_actual = \"\"  # Equipo donde juega\n",
-    "posicion = \"\"  # Posición en el campo\n",
-    "goles_temporada = 0  # Goles en la temporada actual\n",
-    "es_internacional = True  # ¿Juega en su selección nacional?\n",
-    "\n",
-    "# Mostrar la información (no modificar)\n",
-    "print(f\"Jugador: {nombre}\")\n",
-    "print(f\"Edad: {edad} años\")\n",
-    "print(f\"Equipo: {equipo_actual}\")\n",
-    "print(f\"Posición: {posicion}\")\n",
-    "print(f\"Goles esta temporada: {goles_temporada}\")\n",
-    "print(f\"¿Internacional?: {'Sí' if es_internacional else 'No'}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e83fba7e",
-   "metadata": {},
-   "source": [
-    "### Ejercicio 2: Calculadora de Estadísticas\n",
-    "\n",
-    "Crea un programa que calcule estadísticas básicas de un equipo:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "ebd5088f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== ESTADÍSTICAS DE MI EQUIPO ===\n",
-      "Partidos jugados: 20\n",
-      "Victorias: 12\n",
-      "Empates: 5\n",
-      "Derrotas: 3\n",
-      "Puntos totales: 41\n",
-      "Diferencia de goles: +17\n",
-      "Promedio de goles a favor: 1.75\n",
-      "Promedio de goles en contra: 0.90\n",
-      "Porcentaje de victorias: 60.0%\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Datos del equipo (modifica estos valores)\n",
-    "nombre_equipo = \"Mi Equipo\"\n",
-    "partidos_jugados = 20\n",
-    "victorias = 12\n",
-    "empates = 5\n",
-    "derrotas = 3\n",
-    "goles_favor = 35\n",
-    "goles_contra = 18\n",
-    "\n",
-    "# Cálculos (completa el código)\n",
-    "total_partidos = victorias + empates + derrotas  # Suma de victorias + empates + derrotas\n",
-    "puntos_totales = victorias * 3 + empates * 1  # Victorias * 3 + empates * 1\n",
-    "diferencia_goles = goles_favor - goles_contra  # Goles a favor - goles en contra\n",
-    "promedio_goles_favor = goles_favor / partidos_jugados  # Goles a favor / partidos jugados\n",
-    "promedio_goles_contra = goles_contra / partidos_jugados  # Goles en contra / partidos jugados\n",
-    "porcentaje_victorias = (victorias / partidos_jugados) * 100  # (Victorias / partidos jugados) * 100\n",
-    "\n",
-    "# Mostrar resultados\n",
-    "print(f\"=== ESTADÍSTICAS DE {nombre_equipo.upper()} ===\")\n",
-    "print(f\"Partidos jugados: {partidos_jugados}\")\n",
-    "print(f\"Victorias: {victorias}\")\n",
-    "print(f\"Empates: {empates}\")\n",
-    "print(f\"Derrotas: {derrotas}\")\n",
-    "print(f\"Puntos totales: {puntos_totales}\")\n",
-    "print(f\"Diferencia de goles: {diferencia_goles:+d}\")\n",
-    "print(f\"Promedio de goles a favor: {promedio_goles_favor:.2f}\")\n",
-    "print(f\"Promedio de goles en contra: {promedio_goles_contra:.2f}\")\n",
-    "print(f\"Porcentaje de victorias: {porcentaje_victorias:.1f}%\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ae6fb568",
-   "metadata": {},
-   "source": [
-    "### Ejercicio 3: Comparación de Equipos\n",
-    "\n",
-    "Compara dos equipos y determina cuál tiene mejor rendimiento:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "898df98e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== COMPARACIÓN DE EQUIPOS ===\n",
-      "Arsenal: 65 puntos, diferencia: +25\n",
-      "Chelsea: 58 puntos, diferencia: +15\n",
-      "\n",
-      "Mejor equipo: Arsenal\n",
-      "Razón: mayor puntaje\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Datos del Equipo A\n",
-    "equipo_a = \"Arsenal\"\n",
-    "puntos_a = 65\n",
-    "goles_favor_a = 45\n",
-    "goles_contra_a = 20\n",
-    "\n",
-    "# Datos del Equipo B\n",
-    "equipo_b = \"Chelsea\"\n",
-    "puntos_b = 58\n",
-    "goles_favor_b = 40\n",
-    "goles_contra_b = 25\n",
-    "\n",
-    "# Comparaciones (completa el código)\n",
-    "diferencia_puntos = puntos_a - puntos_b  # Puntos A - Puntos B\n",
-    "diferencia_goles_a = goles_favor_a - goles_contra_a  # Goles favor A - Goles contra A\n",
-    "diferencia_goles_b = goles_favor_b - goles_contra_b  # Goles favor B - Goles contra B\n",
-    "\n",
-    "# Determinar mejor equipo\n",
-    "if puntos_a > puntos_b:\n",
-    "    mejor_equipo = equipo_a\n",
-    "    razon = \"mayor puntaje\"\n",
-    "elif puntos_b > puntos_a:\n",
-    "    mejor_equipo = equipo_b\n",
-    "    razon = \"mayor puntaje\"\n",
-    "else:\n",
-    "    if diferencia_goles_a > diferencia_goles_b:\n",
-    "        mejor_equipo = equipo_a\n",
-    "        razon = \"mejor diferencia de goles\"\n",
-    "    elif diferencia_goles_b > diferencia_goles_a:\n",
-    "        mejor_equipo = equipo_b\n",
-    "        razon = \"mejor diferencia de goles\"\n",
-    "    else:\n",
-    "        mejor_equipo = \"Empate\"\n",
-    "        razon = \"rendimiento idéntico\"\n",
-    "\n",
-    "# Mostrar comparación\n",
-    "print(f\"=== COMPARACIÓN DE EQUIPOS ===\")\n",
-    "print(f\"{equipo_a}: {puntos_a} puntos, diferencia: {diferencia_goles_a:+d}\")\n",
-    "print(f\"{equipo_b}: {puntos_b} puntos, diferencia: {diferencia_goles_b:+d}\")\n",
-    "print(f\"\\nMejor equipo: {mejor_equipo}\")\n",
-    "print(f\"Razón: {razon}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "66222592",
    "metadata": {},
    "source": [
-    "## 5. Resumen y Próximos Pasos\n",
+    "\"## 4. Resumen y Próximos Pasos\n",
+    "\",\n",
     "\n",
     "### Lo que Hemos Aprendido\n",
     "\n",
