--- a/material-didactico/bloque-0/semana-2/estructuras-control.ipynb
+++ b/material-didactico/bloque-0/semana-2/estructuras-control.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "c22ea2b0",
    "metadata": {},
    "outputs": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "id": "b67adce3",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "id": "3e6bac0c",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "id": "074458c2",
    "metadata": {},
    "outputs": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "id": "26f3437b",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "id": "3090d07e",
    "metadata": {},
    "outputs": [
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "3224c8ea",
    "metadata": {},
    "outputs": [
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "id": "50fedd57",
    "metadata": {},
    "outputs": [
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "id": "c03a726c",
    "metadata": {},
    "outputs": [
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "id": "1e77cb47",
    "metadata": {},
    "outputs": [
@@ -761,15 +761,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Goleadores Barcelona: {'Suarez', 'Messi', 'Neymar', 'Griezmann'}\n",
-      "Goleadores Real Madrid: {'Modric', 'Benzema', 'Bale', 'Ronaldo'}\n",
-      "Goleadores Champions: {'Messi', 'Lewandowski', 'Benzema', 'Ronaldo'}\n",
+      "Goleadores Barcelona: {'Messi', 'Griezmann', 'Neymar', 'Suarez'}\n",
+      "Goleadores Real Madrid: {'Ronaldo', 'Benzema', 'Modric', 'Bale'}\n",
+      "Goleadores Champions: {'Messi', 'Ronaldo', 'Benzema', 'Lewandowski'}\n",
       "\n",
       "=== OPERACIONES CON CONJUNTOS ===\n",
-      "Todos los goleadores: {'Modric', 'Messi', 'Bale', 'Suarez', 'Ronaldo', 'Griezmann', 'Neymar', 'Benzema'}\n",
+      "Todos los goleadores: {'Messi', 'Suarez', 'Benzema', 'Griezmann', 'Ronaldo', 'Modric', 'Neymar', 'Bale'}\n",
       "Goleadores en ambos equipos: set()\n",
-      "Solo goleadores del Barcelona: {'Suarez', 'Messi', 'Neymar', 'Griezmann'}\n",
-      "Goleadores no comunes: {'Modric', 'Messi', 'Bale', 'Suarez', 'Ronaldo', 'Griezmann', 'Neymar', 'Benzema'}\n",
+      "Solo goleadores del Barcelona: {'Messi', 'Griezmann', 'Neymar', 'Suarez'}\n",
+      "Goleadores no comunes: {'Messi', 'Suarez', 'Benzema', 'Griezmann', 'Ronaldo', 'Modric', 'Neymar', 'Bale'}\n",
       "\n",
       "=== VERIFICACIONES ===\n",
       "¿Messi ha marcado para el Barcelona? True\n",
@@ -828,341 +828,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "925ba809",
-   "metadata": {},
-   "source": [
-    "## 5. Ejercicios Prácticos\n",
-    "\n",
-    "### Ejercicio 1: Gestión de Plantilla de Equipo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "4c2ba41a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Edad promedio del equipo: 0.0 años\n",
-      "Máximo goleador:  con 0 goles\n",
-      "Jugadores por posición: {}\n",
-      "Veteranos (>33 años): []\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Completa el código para gestionar la plantilla de un equipo\n",
-    "\n",
-    "# Datos iniciales\n",
-    "plantilla = [\n",
-    "    {\"nombre\": \"Ter Stegen\", \"posicion\": \"Portero\", \"edad\": 31, \"goles\": 0},\n",
-    "    {\"nombre\": \"Piqué\", \"posicion\": \"Defensa\", \"edad\": 36, \"goles\": 3},\n",
-    "    {\"nombre\": \"Busquets\", \"posicion\": \"Centrocampista\", \"edad\": 35, \"goles\": 1},\n",
-    "    {\"nombre\": \"Messi\", \"posicion\": \"Delantero\", \"edad\": 36, \"goles\": 25},\n",
-    "    {\"nombre\": \"Griezmann\", \"posicion\": \"Delantero\", \"edad\": 32, \"goles\": 15}\n",
-    "]\n",
-    "\n",
-    "# 1. Calcula la edad promedio del equipo\n",
-    "edad_total = 0  # Tu código aquí: suma todas las edades\n",
-    "edad_promedio = 0  # Tu código aquí: edad_total / cantidad de jugadores\n",
-    "\n",
-    "# 2. Encuentra al máximo goleador\n",
-    "max_goleador = \"\"  # Tu código aquí (nombre del jugador)\n",
-    "max_goles = 0  # Tu código aquí (cantidad de goles)\n",
-    "\n",
-    "# 3. Cuenta jugadores por posición\n",
-    "conteo_posiciones = {}\n",
-    "# Tu código aquí para contar jugadores por posición\n",
-    "# Sugerencia: for jugador in plantilla: ...\n",
-    "\n",
-    "# 4. Lista jugadores mayores de 33 años\n",
-    "veteranos = []\n",
-    "# Tu código aquí\n",
-    "# Sugerencia: for jugador in plantilla: if jugador[\"edad\"] > 33: ...\n",
-    "\n",
-    "# Mostrar resultados\n",
-    "print(f\"Edad promedio del equipo: {edad_promedio:.1f} años\")\n",
-    "print(f\"Máximo goleador: {max_goleador} con {max_goles} goles\")\n",
-    "print(f\"Jugadores por posición: {conteo_posiciones}\")\n",
-    "print(f\"Veteranos (>33 años): {[j['nombre'] for j in veteranos]}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f2b7250b",
-   "metadata": {},
-   "source": [
-    "### 💡 Solución del Ejercicio 1 (Para Referencia)\n",
-    "\n",
-    "**¡No mires esta solución hasta haber intentado resolver el ejercicio!**\n",
-    "\n",
-    "<details>\n",
-    "<summary>👁️ Haz clic aquí para ver la solución</summary>\n",
-    "\n",
-    "```python\n",
-    "# SOLUCIÓN COMENTADA - Solo para verificar tu trabajo\n",
-    "\n",
-    "# 1. Calcula la edad promedio del equipo\n",
-    "edad_total = sum(jugador[\"edad\"] for jugador in plantilla)\n",
-    "edad_promedio = edad_total / len(plantilla)\n",
-    "\n",
-    "# 2. Encuentra al máximo goleador\n",
-    "max_goleador = max(plantilla, key=lambda x: x[\"goles\"])[\"nombre\"]\n",
-    "max_goles = max(plantilla, key=lambda x: x[\"goles\"])[\"goles\"]\n",
-    "\n",
-    "# 3. Cuenta jugadores por posición\n",
-    "conteo_posiciones = {}\n",
-    "for jugador in plantilla:\n",
-    "    posicion = jugador[\"posicion\"]\n",
-    "    conteo_posiciones[posicion] = conteo_posiciones.get(posicion, 0) + 1\n",
-    "\n",
-    "# 4. Lista jugadores mayores de 33 años\n",
-    "veteranos = [jugador for jugador in plantilla if jugador[\"edad\"] > 33]\n",
-    "```\n",
-    "\n",
-    "**Resultado esperado:**\n",
-    "- Edad promedio del equipo: 34.0 años\n",
-    "- Máximo goleador: Messi con 25 goles\n",
-    "- Jugadores por posición: {'Portero': 1, 'Defensa': 1, 'Centrocampista': 1, 'Delantero': 2}\n",
-    "- Veteranos (>33 años): ['Piqué', 'Busquets', 'Messi']\n",
-    "\n",
-    "</details>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "72a1899f",
-   "metadata": {},
-   "source": [
-    "### Ejercicio 2: Análisis de Resultados de Liga"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "id": "058f034b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== TABLA DE POSICIONES ===\n",
-      "Equipo          Pts  GF   GC   Dif  \n",
-      "----------------------------------------\n",
-      "\n",
-      "Equipo con mejor diferencia: N/A (sin datos)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Analiza los resultados de múltiples partidos\n",
-    "resultados = [\n",
-    "    (\"Barcelona\", 3, \"Real Madrid\", 1),\n",
-    "    (\"Atletico Madrid\", 2, \"Valencia\", 0),\n",
-    "    (\"Barcelona\", 1, \"Atletico Madrid\", 1),\n",
-    "    (\"Real Madrid\", 4, \"Valencia\", 2),\n",
-    "    (\"Valencia\", 0, \"Barcelona\", 2),\n",
-    "    (\"Real Madrid\", 1, \"Atletico Madrid\", 0)\n",
-    "]\n",
-    "\n",
-    "# 1. Calcula puntos para cada equipo (Victoria=3, Empate=1, Derrota=0)\n",
-    "puntos_equipos = {}\n",
-    "# Tu código aquí\n",
-    "# Sugerencia: for local, g_local, visitante, g_visitante in resultados: ...\n",
-    "\n",
-    "# 2. Calcula goles a favor y en contra\n",
-    "goles_favor = {}\n",
-    "goles_contra = {}\n",
-    "# Tu código aquí\n",
-    "# Sugerencia: acumular goles para cada equipo\n",
-    "\n",
-    "# 3. Encuentra el equipo con mejor diferencia de goles\n",
-    "mejor_diferencia = \"N/A\"  # Cambiar a string para evitar errores\n",
-    "max_diferencia = 0  # Cambiar a entero\n",
-    "# Tu código aquí\n",
-    "# Sugerencia: calcular diferencia para cada equipo\n",
-    "\n",
-    "# 4. Cuenta victorias, empates y derrotas\n",
-    "estadisticas = {}\n",
-    "# Tu código aquí - formato: {\"equipo\": {\"victorias\": 0, \"empates\": 0, \"derrotas\": 0}}\n",
-    "\n",
-    "# Mostrar tabla de posiciones\n",
-    "print(\"=== TABLA DE POSICIONES ===\")\n",
-    "print(f\"{'Equipo':<15} {'Pts':<4} {'GF':<4} {'GC':<4} {'Dif':<5}\")\n",
-    "print(\"-\" * 40)\n",
-    "\n",
-    "# Ordenar equipos por puntos (implementa el ordenamiento)\n",
-    "equipos_ordenados = list(puntos_equipos.keys()) if puntos_equipos else []  # Tu código aquí\n",
-    "# Sugerencia: sorted(puntos_equipos.keys(), key=lambda x: puntos_equipos[x], reverse=True)\n",
-    "\n",
-    "for equipo in equipos_ordenados:\n",
-    "    pts = puntos_equipos.get(equipo, 0)\n",
-    "    gf = goles_favor.get(equipo, 0)\n",
-    "    gc = goles_contra.get(equipo, 0)\n",
-    "    dif = gf - gc\n",
-    "    print(f\"{equipo:<15} {pts:<4} {gf:<4} {gc:<4} {dif:<5}\")\n",
-    "\n",
-    "# Corregir el formato para evitar error con float('-inf')\n",
-    "if max_diferencia != 0:\n",
-    "    print(f\"\\nEquipo con mejor diferencia: {mejor_diferencia} ({max_diferencia:+d})\")\n",
-    "else:\n",
-    "    print(f\"\\nEquipo con mejor diferencia: {mejor_diferencia} (sin datos)\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "249c7ede",
-   "metadata": {},
-   "source": [
-    "### 💡 Solución del Ejercicio 2 (Para Referencia)\n",
-    "\n",
-    "**¡No mires esta solución hasta haber intentado resolver el ejercicio!**\n",
-    "\n",
-    "<details>\n",
-    "<summary>👁️ Haz clic aquí para ver la solución</summary>\n",
-    "\n",
-    "```python\n",
-    "# SOLUCIÓN COMENTADA - Solo para verificar tu trabajo\n",
-    "\n",
-    "# 1. Calcula puntos para cada equipo\n",
-    "puntos_equipos = {}\n",
-    "for local, g_local, visitante, g_visitante in resultados:\n",
-    "    # Inicializar equipos si no existen\n",
-    "    if local not in puntos_equipos:\n",
-    "        puntos_equipos[local] = 0\n",
-    "    if visitante not in puntos_equipos:\n",
-    "        puntos_equipos[visitante] = 0\n",
-    "    \n",
-    "    # Asignar puntos según resultado\n",
-    "    if g_local > g_visitante:  # Victoria local\n",
-    "        puntos_equipos[local] += 3\n",
-    "    elif g_visitante > g_local:  # Victoria visitante\n",
-    "        puntos_equipos[visitante] += 3\n",
-    "    else:  # Empate\n",
-    "        puntos_equipos[local] += 1\n",
-    "        puntos_equipos[visitante] += 1\n",
-    "\n",
-    "# Ordenar equipos por puntos\n",
-    "equipos_ordenados = sorted(puntos_equipos.keys(), key=lambda x: puntos_equipos[x], reverse=True)\n",
-    "```\n",
-    "\n",
-    "**Resultado esperado:**\n",
-    "- Barcelona: 10 puntos\n",
-    "- Real Madrid: 9 puntos  \n",
-    "- Atletico Madrid: 4 puntos\n",
-    "- Valencia: 0 puntos\n",
-    "\n",
-    "</details>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "104db001",
-   "metadata": {},
-   "source": [
-    "### Ejercicio 3: Análisis de Goleadores"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "id": "fd3e6f74",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== ANÁLISIS DE GOLEADORES POR LIGA ===\n",
-      "Total de goleadores únicos: 0\n",
-      "Goleadores en múltiples ligas: set()\n",
-      "\n",
-      "Goleadores únicos por liga:\n",
-      "  Solo La Liga: set()\n",
-      "  Solo Premier League: set()\n",
-      "  Solo Serie A: set()\n",
-      "  Solo Ligue 1: set()\n",
-      "\n",
-      "Goleadores en exactamente 2 ligas: set()\n",
-      "Goleadores en 3 o más ligas: set()\n",
-      "\n",
-      "=== RANKING DE INTERNACIONALIDAD ===\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Analiza goleadores de diferentes ligas\n",
-    "liga_espanola = [\"Messi\", \"Ronaldo\", \"Suarez\", \"Benzema\", \"Griezmann\"]\n",
-    "liga_inglesa = [\"Salah\", \"Kane\", \"Ronaldo\", \"Lukaku\", \"Mané\"]\n",
-    "liga_italiana = [\"Ronaldo\", \"Immobile\", \"Lukaku\", \"Muriel\", \"Zapata\"]\n",
-    "liga_francesa = [\"Messi\", \"Mbappé\", \"Neymar\", \"Ben Yedder\", \"Laborde\"]\n",
-    "\n",
-    "# 1. Convierte las listas a conjuntos\n",
-    "set_espanola = set()  # Tu código aquí: set(liga_espanola)\n",
-    "set_inglesa = set()  # Tu código aquí: set(liga_inglesa)\n",
-    "set_italiana = set()  # Tu código aquí: set(liga_italiana)\n",
-    "set_francesa = set()  # Tu código aquí: set(liga_francesa)\n",
-    "\n",
-    "# 2. Encuentra goleadores que han marcado en múltiples ligas\n",
-    "todas_ligas = set()  # Tu código aquí (unión de todos los conjuntos)\n",
-    "goleadores_multiples = set()  # Tu código aquí (jugadores en más de una liga)\n",
-    "\n",
-    "# 3. Encuentra goleadores únicos por liga\n",
-    "solo_espanola = set()  # Tu código aquí\n",
-    "solo_inglesa = set()  # Tu código aquí\n",
-    "solo_italiana = set()  # Tu código aquí\n",
-    "solo_francesa = set()  # Tu código aquí\n",
-    "\n",
-    "# 4. Análisis específico\n",
-    "# Goleadores en exactamente 2 ligas\n",
-    "en_dos_ligas = set()\n",
-    "# Tu código aquí\n",
-    "\n",
-    "# Goleadores en 3 o más ligas\n",
-    "en_tres_o_mas = set()\n",
-    "# Tu código aquí\n",
-    "\n",
-    "# Mostrar resultados\n",
-    "print(\"=== ANÁLISIS DE GOLEADORES POR LIGA ===\")\n",
-    "print(f\"Total de goleadores únicos: {len(todas_ligas)}\")\n",
-    "print(f\"Goleadores en múltiples ligas: {goleadores_multiples}\")\n",
-    "print()\n",
-    "\n",
-    "print(\"Goleadores únicos por liga:\")\n",
-    "print(f\"  Solo La Liga: {solo_espanola}\")\n",
-    "print(f\"  Solo Premier League: {solo_inglesa}\")\n",
-    "print(f\"  Solo Serie A: {solo_italiana}\")\n",
-    "print(f\"  Solo Ligue 1: {solo_francesa}\")\n",
-    "print()\n",
-    "\n",
-    "print(f\"Goleadores en exactamente 2 ligas: {en_dos_ligas}\")\n",
-    "print(f\"Goleadores en 3 o más ligas: {en_tres_o_mas}\")\n",
-    "\n",
-    "# Bonus: Crear ranking de \"internacionalidad\"\n",
-    "ranking_internacional = {}\n",
-    "for jugador in todas_ligas:\n",
-    "    contador = 0\n",
-    "    # Cuenta en cuántas ligas ha marcado cada jugador\n",
-    "    # Tu código aquí\n",
-    "    # Sugerencia: if jugador in set_espanola: contador += 1\n",
-    "    ranking_internacional[jugador] = contador\n",
-    "\n",
-    "# Mostrar ranking\n",
-    "print(\"\\n=== RANKING DE INTERNACIONALIDAD ===\")\n",
-    "for jugador, ligas in sorted(ranking_internacional.items(), key=lambda x: x[1], reverse=True):\n",
-    "    print(f\"{jugador}: {ligas} ligas\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "e1f05373",
    "metadata": {},
    "source": [
-    "## 6. Resumen y Próximos Pasos\n",
+    "## 5. Resumen y Próximos Pasos\n",
     "\n",
     "### Lo que Hemos Aprendido\n",
     "\n",
@@ -1227,7 +896,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.10.12)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
