Fix corrupted emoji character in Week 4 visualization notebook

--- a/bloque-2/semana-4/visualizacion-datos.ipynb
+++ b/bloque-2/semana-4/visualizacion-datos.ipynb
@@ -270,7 +270,7 @@
     "print(f\"📊 Total de partidos: {len(df_partidos)}\")\n",
     "print(f\"🏟️ Equipos: {len(equipos)}\")\n",
     "\n",
-    "print(f\"\\n\udccb Primeros 5 partidos:\")\n",
+    "print(f\"\\n📋 Primeros 5 partidos:\")\n",
     "print(df_partidos.head())\n",
     "\n",
     "print(f\"\\n🏆 ¿Quién gana más?\")\n",
