--- a/bloque-1/semana-1/configuracion-fundamentos.ipynb
+++ b/bloque-1/semana-1/configuracion-fundamentos.ipynb
@@ -483,7 +483,8 @@
     "\n",
     "---\n",
     "\n",
-    "**¡Felicitaciones por completar tu primera semana de programación con Python!** 🎉\n",
+    "    \"**¡Felicitaciones por completar tu primera semana de programación con Python!**\n",
+    "\",\n",
     "\n",
     "*Recuerda: La programación se aprende practicando. Mientras más código escribas, más cómodo te sentirás.*"
    ]
@@ -491,12 +492,20 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.10.12)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.12"
   }
  },
