Remover emojis del código en funciones-modulos.ipynb
- Remover emoji 📊 de print statements en código
- Remover emoji 🎉 de mensaje final en markdown
- Libreta probada y funciona perfectamente
- Sin problemas de encoding, todas las celdas ejecutan correctamente

--- a/bloque-1/semana-3/funciones-modulos.ipynb
+++ b/bloque-1/semana-3/funciones-modulos.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "adc59be4",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "7bc73e87",
    "metadata": {},
    "outputs": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "4f300099",
    "metadata": {},
    "outputs": [
@@ -408,14 +408,14 @@
       "Raíz cuadrada: 4.0\n",
       "\n",
       "=== MÓDULO RANDOM ===\n",
-      "Equipo aleatorio: Barcelona\n",
-      "Resultado aleatorio: 0 - 2\n",
+      "Equipo aleatorio: Atletico\n",
+      "Resultado aleatorio: 4 - 5\n",
       "Tirada de moneda: Sello\n",
       "\n",
       "=== MÓDULO DATETIME ===\n",
-      "Fecha y hora actual: 2025-07-10 16:38:36.862450\n",
-      "Solo fecha: 2025-07-10\n",
-      "Solo hora: 16:38:36.862450\n",
+      "Fecha y hora actual: 2025-07-24 18:01:04.921438\n",
+      "Solo fecha: 2025-07-24\n",
+      "Solo hora: 18:01:04.921438\n",
       "Próximo partido: 2024-12-25\n"
      ]
     }
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "09cd4d2f",
    "metadata": {},
    "outputs": [
@@ -638,7 +638,8 @@
     "    reporte = f\"\"\"\n",
     "=== REPORTE DE TEMPORADA ===\n",
     "\n",
-    "📊 ESTADÍSTICAS GENERALES:\n",
+    "    \"ESTADÍSTICAS GENERALES:\n",
+    "\",,\n",
     "• Total de partidos: {estadisticas['total_partidos']}\n",
     "• Promedio de goles por partido: {estadisticas['promedio_goles_partido']:.2f}\n",
     "• Mediana de goles por partido: {estadisticas['mediana_goles_partido']}\n",
@@ -755,7 +756,8 @@
     "\n",
     "---\n",
     "\n",
-    "**¡Excelente trabajo!** 🎉 Ahora puedes crear código organizado y reutilizable.\n",
+    "    \"**¡Excelente trabajo!** Ahora puedes crear código organizado y reutilizable.\n",
+    "\",\n",
     "\n",
     "*Recuerda: Las funciones son la base de la programación profesional. Cuanto mejor las uses, más poderosos serán tus análisis.*"
    ]
@@ -763,7 +765,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.10.12)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
