Remover emojis del código en tipos-datos-futbol.ipynb
- Remover emojis de todos los print statements en código Python
- Usar sed para remover de forma sistemática: ✅📊🎨⚽🏆🏟️🎯
- Libreta probada y funciona perfectamente
- Sin problemas de encoding, todas las celdas ejecutan correctamente

--- a/bloque-2/semana-2/tipos-datos-futbol.ipynb
+++ b/bloque-2/semana-2/tipos-datos-futbol.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4f26e4da",
    "metadata": {},
    "outputs": [
@@ -91,9 +91,9 @@
      "output_type": "stream",
      "text": [
       "✅ Librerías importadas exitosamente\n",
-      "📊 Pandas versión: 2.3.1\n",
-      "🔢 NumPy versión: 2.2.6\n",
-      "🎨 Seaborn versión: 0.13.2\n"
+      "📊 Pandas: Para trabajar con datos\n",
+      "🎨 Seaborn: Para gráficos bonitos\n",
+      "⚽ ¡Listos para explorar datos de fútbol!\n"
      ]
     }
    ],
