--- a/bloque-2/semana-3/estadistica-descriptiva.ipynb
+++ b/bloque-2/semana-3/estadistica-descriptiva.ipynb
@@ -86,10 +86,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6d42196d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Librerías listas para estadística\n",
+      "📊 Pandas: Para datos\n",
+      "🎨 Seaborn: Para gráficos bonitos\n",
+      "🔢 NumPy: Para cálculos\n",
+      "\n",
+      "🎯 ¡Todo listo para aprender estadística con fútbol!\n"
+     ]
+    }
+   ],
    "source": [
     "# Importar librerías para estadística\n",
     "import pandas as pd\n",
@@ -277,8 +290,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
