Completar Semana 13: Métricas Avanzadas de Evaluación
- Añade interpretación práctica en contexto deportivo
- Guía de casos de uso para diferentes métricas
- Tabla comparativa completa de modelos
- Recomendaciones finales y mejores prácticas
- Ejercicios y recursos adicionales
- Notebook completamente probado y funcional

--- a/bloque-3/semana-3/metricas-avanzadas-evaluacion.ipynb
+++ b/bloque-3/semana-3/metricas-avanzadas-evaluacion.ipynb
@@ -819,6 +819,268 @@
     "print(f\"🔍 Mejor Recall:    {mejor_recall[0]} ({mejor_recall[1]['recall_macro']:.3f})\")\n",
     "print(f\"⚖️ Mejor F1-Score:  {mejor_f1[0]} ({mejor_f1[1]['f1_macro']:.3f})\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac6497f8",
+   "metadata": {},
+   "source": [
+    "## 5. Interpretación Práctica en Contexto Deportivo\n",
+    "\n",
+    "### 5.1 ¿Qué Métrica Usar en Cada Situación?\n",
+    "\n",
+    "Ahora que conocemos todas las métricas, veamos cuándo usar cada una en el mundo deportivo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9907a002",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "⚽ GUÍA PRÁCTICA: ¿QUÉ MÉTRICA USAR CUÁNDO?\n",
+      "=======================================================\n",
+      "\n",
+      "1. 🏥 Detectar lesiones graves\n",
+      "   📈 Métrica: RECALL alto\n",
+      "   ❓ Por qué: No queremos perder ninguna lesión grave\n",
+      "   💡 Ejemplo: Mejor 10 falsas alarmas que 1 lesión no detectada\n",
+      "   ⚠️ Trade-off: Aceptamos más falsos positivos\n",
+      "\n",
+      "2. 💰 Seleccionar jugadores para fichar\n",
+      "   📈 Métrica: PRECISION alta\n",
+      "   ❓ Por qué: Los fichajes son caros, deben ser acertados\n",
+      "   💡 Ejemplo: Mejor fichar 3 buenos que 10 mediocres\n",
+      "   ⚠️ Trade-off: Podemos perder algunos buenos jugadores\n",
+      "\n",
+      "3. 📊 Predecir resultados generales\n",
+      "   📈 Métrica: F1-SCORE o ACCURACY\n",
+      "   ❓ Por qué: Necesitamos balance general\n",
+      "   💡 Ejemplo: Pronósticos deportivos para medios\n",
+      "   ⚠️ Trade-off: Balance entre precision y recall\n",
+      "\n",
+      "4. 🎯 Sistema de apuestas\n",
+      "   📈 Métrica: ROC-AUC + PRECISION\n",
+      "   ❓ Por qué: Importa la confianza de la predicción\n",
+      "   💡 Ejemplo: Solo apostar cuando tengamos >80% confianza\n",
+      "   ⚠️ Trade-off: Menos apuestas pero más acertadas\n",
+      "\n",
+      "5. ⚖️ Decisiones disciplinarias\n",
+      "   📈 Métrica: PRECISION muy alta\n",
+      "   ❓ Por qué: Las sanciones deben estar bien fundamentadas\n",
+      "   💡 Ejemplo: Suspensiones, multas, etc.\n",
+      "   ⚠️ Trade-off: Algunos casos pueden quedar sin sancionar\n",
+      "\n",
+      "=======================================================\n",
+      "\n",
+      "📊 RESUMEN COMPLETO DE NUESTROS MODELOS:\n",
+      "==================================================\n",
+      "             Modelo Accuracy ROC-AUC Precision Recall F1-Score\n",
+      "Regresión Logística    0.823   0.935     0.780  0.766    0.772\n",
+      "      Random Forest    0.704   0.859     0.629  0.602    0.607\n",
+      "                SVM    0.806   0.910     0.767  0.733    0.746\n",
+      "\n",
+      "🏆 RECOMENDACIONES FINALES:\n",
+      "==============================\n",
+      "🥇 Para uso general: Regresión Logística (mejor en casi todas las métricas)\n",
+      "🥈 Para robustez: SVM (buen balance, menos overfitting)\n",
+      "🥉 Para interpretabilidad: Random Forest (muestra importancia de variables)\n",
+      "\n",
+      "💡 CONSEJOS PRÁCTICOS:\n",
+      "• Siempre evalúa múltiples métricas, no solo accuracy\n",
+      "• Considera el contexto: ¿qué tipo de error es más costoso?\n",
+      "• ROC-AUC es excelente para comparar modelos\n",
+      "• F1-Score es perfecto cuando las clases están desbalanceadas\n",
+      "• Precision/Recall te ayudan a entender tipos específicos de errores\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Análisis de casos de uso prácticos\n",
+    "print(\"⚽ GUÍA PRÁCTICA: ¿QUÉ MÉTRICA USAR CUÁNDO?\")\n",
+    "print(\"=\" * 55)\n",
+    "\n",
+    "casos_uso = {\n",
+    "    \"🏥 Detectar lesiones graves\": {\n",
+    "        \"Métrica recomendada\": \"RECALL alto\",\n",
+    "        \"Justificación\": \"No queremos perder ninguna lesión grave\",\n",
+    "        \"Ejemplo\": \"Mejor 10 falsas alarmas que 1 lesión no detectada\",\n",
+    "        \"Trade-off\": \"Aceptamos más falsos positivos\"\n",
+    "    },\n",
+    "    \n",
+    "    \"💰 Seleccionar jugadores para fichar\": {\n",
+    "        \"Métrica recomendada\": \"PRECISION alta\",\n",
+    "        \"Justificación\": \"Los fichajes son caros, deben ser acertados\",\n",
+    "        \"Ejemplo\": \"Mejor fichar 3 buenos que 10 mediocres\",\n",
+    "        \"Trade-off\": \"Podemos perder algunos buenos jugadores\"\n",
+    "    },\n",
+    "    \n",
+    "    \"📊 Predecir resultados generales\": {\n",
+    "        \"Métrica recomendada\": \"F1-SCORE o ACCURACY\",\n",
+    "        \"Justificación\": \"Necesitamos balance general\",\n",
+    "        \"Ejemplo\": \"Pronósticos deportivos para medios\",\n",
+    "        \"Trade-off\": \"Balance entre precision y recall\"\n",
+    "    },\n",
+    "    \n",
+    "    \"🎯 Sistema de apuestas\": {\n",
+    "        \"Métrica recomendada\": \"ROC-AUC + PRECISION\",\n",
+    "        \"Justificación\": \"Importa la confianza de la predicción\",\n",
+    "        \"Ejemplo\": \"Solo apostar cuando tengamos >80% confianza\",\n",
+    "        \"Trade-off\": \"Menos apuestas pero más acertadas\"\n",
+    "    },\n",
+    "    \n",
+    "    \"⚖️ Decisiones disciplinarias\": {\n",
+    "        \"Métrica recomendada\": \"PRECISION muy alta\",\n",
+    "        \"Justificación\": \"Las sanciones deben estar bien fundamentadas\",\n",
+    "        \"Ejemplo\": \"Suspensiones, multas, etc.\",\n",
+    "        \"Trade-off\": \"Algunos casos pueden quedar sin sancionar\"\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "for i, (caso, detalles) in enumerate(casos_uso.items(), 1):\n",
+    "    print(f\"\\n{i}. {caso}\")\n",
+    "    print(f\"   📈 Métrica: {detalles['Métrica recomendada']}\")\n",
+    "    print(f\"   ❓ Por qué: {detalles['Justificación']}\")\n",
+    "    print(f\"   💡 Ejemplo: {detalles['Ejemplo']}\")\n",
+    "    print(f\"   ⚠️ Trade-off: {detalles['Trade-off']}\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 55)\n",
+    "\n",
+    "# Crear tabla comparativa de nuestros modelos\n",
+    "print(\"\\n📊 RESUMEN COMPLETO DE NUESTROS MODELOS:\")\n",
+    "print(\"=\" * 50)\n",
+    "\n",
+    "# Preparar datos para tabla comparativa\n",
+    "tabla_resumen = []\n",
+    "for modelo in modelos_nombres:\n",
+    "    fila = {\n",
+    "        'Modelo': modelo,\n",
+    "        'Accuracy': f\"{accuracy_score(y_test, modelos_data[modelo]['pred']):.3f}\",\n",
+    "        'ROC-AUC': f\"{resultados_roc[modelo]['macro']:.3f}\",\n",
+    "        'Precision': f\"{resultados_prf[modelo]['precision_macro']:.3f}\",\n",
+    "        'Recall': f\"{resultados_prf[modelo]['recall_macro']:.3f}\",\n",
+    "        'F1-Score': f\"{resultados_prf[modelo]['f1_macro']:.3f}\"\n",
+    "    }\n",
+    "    tabla_resumen.append(fila)\n",
+    "\n",
+    "# Crear DataFrame para visualización\n",
+    "df_resumen = pd.DataFrame(tabla_resumen)\n",
+    "print(df_resumen.to_string(index=False))\n",
+    "\n",
+    "print(\"\\n🏆 RECOMENDACIONES FINALES:\")\n",
+    "print(\"=\" * 30)\n",
+    "print(\"🥇 Para uso general: Regresión Logística (mejor en casi todas las métricas)\")\n",
+    "print(\"🥈 Para robustez: SVM (buen balance, menos overfitting)\")\n",
+    "print(\"🥉 Para interpretabilidad: Random Forest (muestra importancia de variables)\")\n",
+    "\n",
+    "print(\"\\n💡 CONSEJOS PRÁCTICOS:\")\n",
+    "print(\"• Siempre evalúa múltiples métricas, no solo accuracy\")\n",
+    "print(\"• Considera el contexto: ¿qué tipo de error es más costoso?\")\n",
+    "print(\"• ROC-AUC es excelente para comparar modelos\")\n",
+    "print(\"• F1-Score es perfecto cuando las clases están desbalanceadas\")\n",
+    "print(\"• Precision/Recall te ayudan a entender tipos específicos de errores\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ffee81e",
+   "metadata": {},
+   "source": [
+    "## 6. Resumen y Conclusiones\n",
+    "\n",
+    "### 6.1 Lo que Aprendimos Hoy\n",
+    "\n",
+    "✅ **Métricas Avanzadas de Evaluación**:\n",
+    "- **ROC-AUC**: Capacidad de separar clases (excelente para comparar modelos)\n",
+    "- **Precision**: Cuántos de los casos marcados son realmente positivos\n",
+    "- **Recall**: Cuántos de los casos reales logramos encontrar\n",
+    "- **F1-Score**: Balance perfecto entre precisión y cobertura\n",
+    "\n",
+    "✅ **Interpretación Contextual**:\n",
+    "- **No todas las métricas** son iguales para todos los problemas\n",
+    "- **El costo de los errores** determina qué métrica priorizar\n",
+    "- **Accuracy solo** puede ser engañoso con clases desbalanceadas\n",
+    "\n",
+    "✅ **Aplicación Práctica**:\n",
+    "- **Casos de uso específicos** en análisis deportivo\n",
+    "- **Selección de métricas** según el objetivo del proyecto\n",
+    "- **Comparación sistemática** de múltiples modelos\n",
+    "\n",
+    "### 6.2 Conceptos Clave para Recordar\n",
+    "\n",
+    "📈 **ROC-AUC**: \"¿Qué tan bien separa mi modelo las diferentes clases?\"\n",
+    "- AUC = 1.0: Modelo perfecto\n",
+    "- AUC = 0.5: Modelo aleatorio\n",
+    "- AUC > 0.8: Modelo muy bueno\n",
+    "\n",
+    "🎯 **Precision**: \"De mis predicciones positivas, ¿cuántas son correctas?\"\n",
+    "- Alta precision = Pocas falsas alarmas\n",
+    "- Importante cuando los errores son costosos\n",
+    "\n",
+    "🔍 **Recall**: \"De todos los casos reales, ¿cuántos encuentro?\"\n",
+    "- Alto recall = No pierdo casos importantes\n",
+    "- Crucial para seguridad y salud\n",
+    "\n",
+    "⚖️ **F1-Score**: \"¿Cuál es el balance perfecto?\"\n",
+    "- Media armónica de precision y recall\n",
+    "- Excelente para clases desbalanceadas\n",
+    "\n",
+    "### 6.3 Comparación de Nuestros Modelos\n",
+    "\n",
+    "**🏆 GANADOR GENERAL: Regresión Logística**\n",
+    "- ✅ Mejor ROC-AUC (0.935)\n",
+    "- ✅ Mejor Precision (0.780)\n",
+    "- ✅ Mejor Recall (0.766)\n",
+    "- ✅ Mejor F1-Score (0.772)\n",
+    "- ✅ Mayor Accuracy (0.823)\n",
+    "\n",
+    "**🥈 SEGUNDO LUGAR: SVM**\n",
+    "- Buen balance en todas las métricas\n",
+    "- Menos propenso a overfitting\n",
+    "- Mejor para datasets complejos\n",
+    "\n",
+    "**🥉 TERCER LUGAR: Random Forest**\n",
+    "- Útil para entender importancia de variables\n",
+    "- Más interpretable que SVM\n",
+    "- Puede necesitar más tuning\n",
+    "\n",
+    "### 6.4 Guía de Decisión Rápida\n",
+    "\n",
+    "#### **¿Qué métrica usar según tu problema?**\n",
+    "\n",
+    "| Situación | Métrica Principal | Razón |\n",
+    "|-----------|------------------|-------|\n",
+    "| 🏥 **Seguridad/Salud** | **RECALL** | No perder casos graves |\n",
+    "| 💰 **Decisiones costosas** | **PRECISION** | Evitar errores caros |\n",
+    "| 📊 **Uso general** | **F1-SCORE** | Balance equilibrado |\n",
+    "| 🎲 **Comparar modelos** | **ROC-AUC** | Capacidad de separación |\n",
+    "| ⚖️ **Clases balanceadas** | **ACCURACY** | Métrica simple y clara |\n",
+    "\n",
+    "### 6.5 ¿Qué Viene Después?\n",
+    "\n",
+    "En las siguientes semanas construiremos sobre este conocimiento:\n",
+    "- **Semana 14**: Feature Engineering y optimización de hiperparámetros\n",
+    "- **Semana 15**: Proyecto final integrador usando todas las métricas\n",
+    "\n",
+    "### 6.6 Ejercicios para Practicar\n",
+    "\n",
+    "**Desafío Práctico**: \n",
+    "1. **Modifica los umbrales** de decisión y observa cómo cambian precision/recall\n",
+    "2. **Simula un dataset desbalanceado** (ej: 90% Victoria_Local) y compara métricas\n",
+    "3. **Investiga casos reales**: ¿Qué métricas usan en análisis deportivo profesional?\n",
+    "\n",
+    "### 6.7 Recursos Adicionales\n",
+    "\n",
+    "- 📚 **Documentación Scikit-learn**: Guías detalladas de métricas\n",
+    "- 📊 **Kaggle**: Competencias deportivas con métricas reales\n",
+    "- 🏆 **Papers académicos**: Análisis deportivo con machine learning\n",
+    "\n",
+    "¡Excelente trabajo! Ahora dominas las métricas avanzadas para evaluar modelos de manera profesional. 🚀⚽📊"
+   ]
   }
  ],
  "metadata": {
